# ontokit-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  RELEASING.md  SECURITY.md  compose.prod.yaml  compose.yaml  pyproject.toml  railway.json
.claude/commands/: post-merge.md
.github/: dependabot.yml
.github/workflows/: dependabot-rebase-on-push.yml  osv-scanner.yml  pr-target-guard.yml  release.yml  semgrep.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/03-seed-on-startup-public-projects/: 03-01-PLAN.md  (+4 more)
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
alembic/: env.py
alembic/versions/: 0c4545e3814e_add_merge_commit_hashes_to_pull_requests.py  295fa3db0e38_add_author_name_and_email_to_pull_.py  2d41d93ea12f_add_author_name_and_author_email_to_.py  47cc27515626_add_subject_type_to_lint_issues.py  5f63c89c3669_add_projects_and_project_members_tables.py  94afeba9ab5c_add_project_lint_configs.py  a1b2c3d4e5f6_add_import_fields_to_projects.py  a1b2c3d4e5f6_add_project_lint_configs.py  a3b4c5d6e7f8_add_normalization_report.py  b7c9d8e1f2a3_add_pr_workflow_tables.py  c8d9e0f1a2b3_add_lint_tables.py  e68f6b98b09b_add_label_preferences_to_projects.py  g5b6c7d8e9f0_add_branch_metadata_table.py  i7d8e9f0g1h2_add_github_sync_fields.py  j8e9f0g1h2i3_add_turtle_file_path.py  l0g1h2i3j4k5_add_suggestion_sessions_table.py  m1n2o3p4q5r6_add_entity_change_events.py  n2o3p4q5r6s7_add_embedding_tables.py  p4q5r6s7t8u9_add_upstream_sync_tables.py  q5r6s7t8u9v0_add_suggestion_review_fields.py  r1s2t3u4v5w6_rename_upstream_to_remote_sync.py  s7t8u9v0w1x2_add_ontology_index_tables.py  t8u9v0w1x2y3_add_anonymous_suggestion_fields.py  u9v0w1x2y3a4_add_llm_config_audit_tables_and_member_flag.py  v9w0x1y2z3a4_add_hnsw_index_and_duplicate_rejections.py
app/: __init__.py  main.py  worker.py
app/collab/: presence.py  protocol.py  transform.py
app/core/: auth.py  config.py
app/git/: __init__.py  bare_repository.py  repository.py
app/models/: __init__.py  branch_metadata.py  lint.py  normalization.py  project.py  pull_request.py
app/schemas/: __init__.py  auth.py  lint.py  owl_class.py  owl_property.py  project.py  pull_request.py
app/services/: github_service.py  github_sync.py  linter.py  normalization_service.py  ontology.py  ontology_extractor.py  project_service.py  pull_request_service.py  search.py  sitemap_notifier.py  storage.py  user_service.py
axigraph/schemas/: user_settings.py
axigraph/services/: project_service.py  pull_request_service.py  user_service.py
config/zitadel/: config.yaml  steps.yaml
docs/: DEPLOYMENT.md  ZITADEL_SETUP.md  coverage-plan.md
ontokit/: __init__.py  folio_loader.py  main.py  runner.py  version.py  worker.py
ontokit/api/: dependencies.py  health.py  projects.py
ontokit/collab/: __init__.py  presence.py  protocol.py  transform.py
ontokit/core/: __init__.py  anonymous_token.py  auth.py  beacon_token.py  config.py  constants.py  database.py  encryption.py
ontokit/git/: __init__.py  bare_repository.py  repository.py
ontokit/models/: __init__.py  branch_metadata.py  change_event.py  duplicate_rejection.py  embedding.py  join_request.py  lint.py  lint_config.py  llm_config.py  normalization.py  project.py  pull_request.py  remote_sync.py  suggestion_session.py  upstream_sync.py  user_github_token.py
ontokit/schemas/: __init__.py  analytics.py  anonymous_suggestion.py  duplicate_check.py  embeddings.py  generation.py  graph.py  join_request.py  lint.py  llm.py  notification.py  ontology.py  owl_class.py  owl_property.py  project.py  pull_request.py  quality.py  remote_sync.py  search.py  suggestion.py  upstream_sync.py
ontokit/services/: change_event_service.py  consistency_service.py  context_assembler.py  cross_reference_service.py  duplicate_check_service.py  duplicate_detection_service.py  embedding_service.py  embedding_text_builder.py  github_service.py  github_sync.py  gloss_extraction_service.py  indexed_ontology.py  join_request_service.py  linter.py  normalization_service.py  ontology.py  ontology_extractor.py  ontology_index.py  project_service.py  pull_request_service.py  quality_filter.py  rdf_utils.py  reasoner_service.py  remote_sync_service.py  search.py  sitemap_notifier.py  startup_checks.py  storage.py  structural_similarity_service.py  suggestion_generation_service.py  suggestion_service.py  upstream_sync_service.py  user_service.py  validation_service.py
scripts/: benchmark_index.py  entrypoint.sh  init-db.sh  init-zitadel-db.sql  migrate_to_bare_repos.py  prepare-release.py  reset-dev-environment.sh  seed-project.py  set-version.py  setup-zitadel.py  setup-zitadel.sh
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  test_git_operations.py  test_project_workflow.py
tests/unit/: conftest.py  test_analytics_routes.py  test_auth.py  test_auth_core.py  test_auth_disabled.py  test_auth_routes.py  test_bare_repository.py  test_bare_repository_service.py  test_beacon_token.py  test_change_event_service.py  test_collab_presence.py  test_collab_protocol.py  test_collab_transform.py  test_config.py  test_context_assembler.py  test_dependencies.py  test_di_factories.py  test_duplicate_check.py  test_duplicate_detection.py  test_embedding_rebuild.py  test_embedding_service.py  test_embedding_text_builder.py  test_embeddings_routes.py  test_encryption.py  test_entity_validation.py  test_exceptions.py  test_generation_schemas.py  test_get_git_ontology_path.py  test_github_service.py  test_github_sync.py  test_health.py  test_index_status_route.py  test_index_ws.py  test_indexed_ontology.py  test_join_request_service.py  test_lint_config.py  test_lint_routes.py  test_lint_routes_extended.py  test_lint_ws.py  test_linter.py  (+38 more)
(+62 files in other folders)
